--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Oscar Torres",
   "license": "MIT",
   "dependencies": {
+    "@datastructures-js/queue": "^4.2.3",
     "typescript": "^5.0.3"
   }
 }
