--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng-test-gen",
-  "version": "1.0.0",
+  "name": "ngtestgen",
+  "version": "1.1.1",
   "description": "Angular Test Generator",
   "main": "index.js",
   "type": "module",
@@ -11,7 +11,13 @@
   "author": "Oscar Torres",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^5.2.0",
+    "commander": "^10.0.0",
+    "conf": "^11.0.1",
     "datastructures-js": "^12.0.0",
     "typescript": "^5.0.3"
+  },
+  "bin": {
+    "ngtestgen": "./index.js"
   }
 }
