--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngtestgen",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Angular Test Generator",
   "main": "index.js",
   "type": "module",
@@ -14,6 +14,7 @@
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "conf": "^11.0.1",
+    "datastructures-js": "^12.0.0",
     "typescript": "^5.0.3"
   },
   "bin": {
